# rethinkmodel

./: .gitignore  .travis.yml  LICENSE  Makefile  Pipfile  README.md  coverage.xml  pyproject.toml  setup.cfg  sonar-project.properties
.github/workflows/: python-publish.yml
coverage-reports/: coverage-20210302-142025.xml
doc/: basic-usage.rst  conf.py  index.rst  install.rst  project.rst
doc/_static/: custom.css
doc/_templates/: footer.html
doc/modules/: actions.rst  checkers.rst  db.rst  index.rst  init.rst  manage.rst  model.rst  rethinkmodel.rst  transformations.rst
doc/tutorials/: blogpost-and-comments.rst  index.rst
docs/: basic-usage.html  genindex.html  index.html  install.html  manage.html  objects.inv  project.html  py-modindex.html  search.html  searchindex.js
docs/_modules/: index.html  rethinkmodel.html
docs/_modules/rethinkmodel/: db.html  manage.html  model.html
docs/_sources/: basic-usage.rst.txt  index.rst.txt  install.rst.txt  manage.rst.txt
docs/_sources/modules/: db.rst.txt  index.rst.txt  manage.rst.txt
docs/_static/: custom.css  flasky.css
docs/modules/: db.html  index.html  manage.html  model.html
docs/tutorials/: blogpost-and-comments.html  index.html
rethinkmodel/: __init__.py  actions.py  checkers.py  db.py  exceptions.py  manage.py  model.py  transforms.py
rethinkmodel/tests/: __init__.py  test.py  test_boolean_get.py  test_cascade.py  test_feed.py  test_generic.py  test_linked_objects.py  test_manage.py  test_one_to_many.py  test_relations.py  test_softdelete.py  test_standard_usage.py  utils.py
tests/: test_boolean_get.py  test_db_creation.py  test_feed.py  test_filters.py  test_generic.py  test_manage.py  test_relations.py  test_soft_deletion.py
