[build-system]
requires = ["setuptools", "wheel", "Cython"]
build-backend="setuptools.build_meta"

[tool.pytest.ini_options]
filterwarnings= [
    "ignore:Using or importing the ABCs from 'collections' instead of from 'collections.abc' is deprecated since Python 3.3, and in 3.10 it will stop working:DeprecationWarning"
]
