[metadata]
name = rethinkmodel
version = 0.1.0
keywords =
  rethinkmodel
  rethinkdb
  ORM
license = MIT License
url = https://metal3d.github.io/rethinkmodel/
project_urls =
  GitHub = https://github.com/metal3d/rethinkmodel
  Bug Tracker = https://github.com/metal3d/rethinkmodel/issues
description = ORM to manage RethinkDB database objects
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
  License :: OSI Approved :: MIT License
  Topic :: Database
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Typing :: Typed

[options]
packages = find:
install_requires =
  rethinkdb
[options.packages.find]
exclude =
  rethinkmodel.tests
